# godot-rustube

./: Cargo.toml  LICENSE  Main.gd  Main.tscn  README.md  Rustube.gd  Test.tscn  linux_build.sh  project.godot
.github/workflows/: rust.yml
addons/godot-rustube/: custom_node.gdns  gdnative_lib.tres  native_plugin.gdnlib  plugin.cfg  plugin.gd
src/: Cargo.toml  lib.rs
src/godot-rustube/: Cargo.toml
src/godot-rustube/src/: lib.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
src/rustube/: Cargo.toml
